Changelog to be added.

--- a/rule34_bot.example.cfg
+++ b/rule34_bot.example.cfg
@@ -1,11 +1,22 @@
 [Reddit]
-client_id = your_reddit_client_id # https://www.reddit.com/prefs/apps
-client_secret = your_reddit_client_secret # https://www.reddit.com/prefs/apps
-user_agent = Contact me at /u/NeyotBot if any problems occur. # Can be anything.
+# https://www.reddit.com/prefs/apps
+client_id = <reddit client id>
+client_secret = <reddit client secret>
+# user_agent can be anything
+user_agent = Contact me at /u/NeyotBot if any problems occur.
 
 [Discord]
-discord_token = your_discord_token # https://discordapp.com/developers/applications/me
+# https://discordapp.com/developers/applications/me
+discord_token = <discord token>
 
 [Data_Logging]
-xml_file = /var/www/html/botdata.xml # Location of the XML file.
-log_file = /var/log/discordBots/redditBot.log # Location of the main log file.
+# Location of the XML file to store data.
+xml_file = /var/www/html/botdata.xml
+# Location of main log file.
+log_file = /var/log/discordBots/redditBot.log
+
+[MySQL]
+host = <mysql host>
+user = <mysql user>
+password = <mysql password>
+database = <mysql database>
