--- a/reddit_bot.example.cfg
+++ b/reddit_bot.example.cfg
@@ -7,7 +7,7 @@ user_agent = Contact me at /u/NeyotBot if any problems occur.
 
 [Discord]
 # https://discordapp.com/developers/applications/me
-discord_token = <discord token>
+discord_token = <ODA3NTQwNjY3Mjk0MTU0NzYz.YB5e2g.VwOgnRlL2uNwF1yMCRDGFlVepTU>
 
 [Data_Logging]
 # Location of the XML file to store data.
